Add index.html for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="theme-variables.css" />
     <title>Shared Tailwind Config</title>
   </head>
   <body>
